# hdata

./: LICENSE  README.md  hdata.cabal  stack.yaml
app/: Main.hs  classification.hs  feedforward.hs
hdata/: README.md  hdata.cabal
