name:                hdata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hdata#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hdata-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hdata
                     , datasets
                     , hmatrix
  default-language:    Haskell2010

executable             feedforward
    ghc-options:       -Wall -threaded -O2
    hs-source-dirs:    app
    main-is:           feedforward.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , bytestring
                     , cereal
                     , either
                     , optparse-applicative            == 0.13.*
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix
                     , transformers
                     , singletons
                     , semigroups
                     , MonadRandom

executable             classification
    ghc-options:       -Wall -threaded -O2
    hs-source-dirs:    app
    main-is:           classification.hs
    build-depends:     base
                     , grenade
                     , attoparsec
                     , datasets
                     , bytestring
                     , cereal
                     , either
                     , optparse-applicative            == 0.13.*
                     , text                            == 1.2.*
                     , mtl                             >= 2.2.1      && < 2.3
                     , hmatrix
                     , transformers
                     , singletons
                     , semigroups
                     , MonadRandom

test-suite hdata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hdata
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hdata
